CR-2009-10-19-0: Cleanup:     Enhanced logging in junit tests
                 Merged from: V61_BRANCH
                 Review:      AP

MD-2009-10-02-0: CVS:		Created V62u4_TAG
-----------------------------------------------------

MD-2009-09-21-0: Enhancem.:   updated version to 6.2u4

LP-2009-09-01-0: Bugfix:      SMF services should be started even when different
                              SMF service starts them
                 Bugster:     6877588
                 Issue:       3124
                 Review:      MD

JO-2009-06-23-0: Enhancem.: Fixed typos in arco_faq.html

JO-2009-06-22-0: Enhancem.: Updated arco_faq.html

MD-2009-06-15-0: CVS:           Created V62u3_TAG
-----------------------------------------------------

MD-2009-04-21-0: CVS:           Created V62u3beta_TAG
-----------------------------------------------------

RD-2009-02-16-0: CVS:         Created V62u2_TAG
-----------------------------------------------

RD-2009-02-11-0: CVS:         Created V62u2_RC2_TAG
---------------------------------------------------

AP-2009-02-10-0: Bugfix:      PostgreSQL jdbc driver is not bundled in packages,
                              must be handled.
                 Belongs to:  AP-2009-02-03-0
                 Review:      JO

RD-2009-02-03-0: CVS:         Created V62u2_RC1_TAG
---------------------------------------------------

AP-2009-02-03-0: Bugfix:      SQL queries don't display all column values and
                              saving of the result causes an exception
                 Bugster:     6792542
                 Issue:       2869
                 Review:      JO

AP-2009-01-26-0: Bugfix:      File permissions must be set by admin user
                 Review:      JO

RD-2008-12-12-0: CVS:         Created V62u2beta_TAG
---------------------------------------------------

RD-2008-12-09-0: CVS:         Created V62u2alpha2_TAG
-----------------------------------------------------

RD-2008-11-28-0: CVS:         Created V62u2alpha1_TAG