@@ -268,7 +268,7 @@ queryParams()
 {
    ProcessSGERoot
    GetCell
-   
+
    # We require cluster_name
    if [ -z "$SGE_CLUSTER_NAME" ]; then
       SGE_CLUSTER_NAME=`cat $SGE_ROOT/$SGE_CELL/common/cluster_name`
@@ -375,7 +375,7 @@ do
    QUERY_PARAM_REPEATED=1
 done
 
-verifyFilePermissions $SGE_ROOT/dbwriter
+correctFilePermissions dbwriter $SGE_ROOT
 
 # database model installation
 $CLEAR
